[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/window.png" type="Texture" id=1]
[ext_resource path="res://UI/energy-bar.png" type="Texture" id=2]
[ext_resource path="res://UI/UI.gd" type="Script" id=3]
[ext_resource path="res://UI/map-cursor/map_cursor2.png" type="Texture" id=4]
[ext_resource path="res://UI/map-cursor/map_cursor1.png" type="Texture" id=5]
[ext_resource path="res://UI/Pixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Gizmos/Card/cards.png" type="Texture" id=7]
[ext_resource path="res://UI/termnial-window/terminal-window-bg-1.png" type="Texture" id=8]
[ext_resource path="res://UI/termnial-window/terminal-window-bg-2.png" type="Texture" id=9]
[ext_resource path="res://UI/termnial-window/message.png" type="Texture" id=10]
[ext_resource path="res://UI/heart.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="TextureRect" parent="Control"]
margin_right = 88.0
margin_bottom = 104.0
texture = ExtResource( 1 )

[node name="EnergyBar" type="TextureRect" parent="Control"]
margin_left = 364.0
margin_top = 31.0
margin_right = 380.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="LivesBar" type="TextureRect" parent="Control"]
margin_left = 393.0
margin_top = 30.0
margin_right = 402.0
margin_bottom = 42.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="mapCursorSprite" type="AnimatedSprite" parent="Control"]
position = Vector2( 398, 202 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="LabelPieces" type="Label" parent="Control"]
margin_left = 383.0
margin_top = 112.0
margin_right = 399.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( -32, 10 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="LabelPieces2" type="Label" parent="Control"]
margin_left = 394.0
margin_top = 112.0
margin_right = 410.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( -32, 10 )
custom_fonts/font = SubResource( 2 )
text = "/15"

[node name="CardSprite" type="Sprite" parent="Control"]
position = Vector2( 384, 165 )
texture = ExtResource( 7 )
hframes = 4

[node name="TerminalWindow" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="TerminalWindow"]
frames = SubResource( 3 )
playing = true
centered = false

[node name="Message" type="Sprite" parent="TerminalWindow"]
texture = ExtResource( 10 )
centered = false
hframes = 7
frame = 1
